--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,9 @@
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-bg-color: #ffffff;
-  --secondary-bg-color: #f5f4fa;
-}
-
 /*-- Шрифты--*/
 
 /*font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif;*/
+
+/*-- Палитра--*/
 
 /*-- основной цвет #212121--*/
 /*-- вторичный цвет #757575--*/
@@ -18,25 +12,52 @@ font-family: 'Roboto', sans-serif;*/
 /*--цвет контактов в футере rgba(255, 255, 255, 0.6) ---*/
 /* ----основной цвет фона #FFFFFF---*/
 /* ----вторичный цвет фона #F5F4FA---*/
+
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --primary-bg-color: #ffffff;
+  --secondary-bg-color: #f5f4fa;
+}
+
 body {
   color: var(--primary-text-color);
   background-color: var(--primary-bg-color);
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
+a {
+  text-decoration: none;
+}
 .logo {
   color: var(--title-text-color);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 .logo:hover,
 logo:focus {
   color: var(--accent-color);
 }
-
+.logo-accent {
+  color: var(--accent-color);
+}
 .list {
   list-style: none;
 }
 /* ----Навигация сайта---*/
 .site-nav a {
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .site-nav a:hover,
 site-nav a:focus {
@@ -58,16 +79,37 @@ contact a:focus {
 
 .hero-title {
   color: var(--primary-bg-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  background: var(--secondary-bg-color);
 }
 
 /* ----Секции---*/
+
 .section-title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+}
+.item-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
 }
 /* ----Кнопка---*/
 .button {
   color: var(--title-text-color);
   background-color: var(--primary-bg-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
 }
 .button.primary {
   background-color: var(--accent-color);
